--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -10,7 +10,8 @@
 
     var script = document.createElement('script');
     script.setAttribute('src', 'https://utteranc.es/client.js');
-    script.setAttribute('repo', '{{ site.repository }}');
+    // script.setAttribute('repo', '{{ site.repository }}');
+    script.setAttribute('repo', 'sksggg123/blog-comments');
     script.setAttribute('issue-term', 'pathname');
     script.setAttribute('theme', '{{ site.comments.utterances.theme | default: "github-light" }}');
     script.setAttribute('crossorigin', 'anonymous');
