home page & post page : write, update date and  category,tag 추가

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -10,6 +10,12 @@
   {% assign title = post.title %}
 {% endif %}
 
+{% if post.date %}
+  {% assign date = post.date | markdownify | remove: "<p>" | remove: "</p>" %}
+{% else %}
+  {% assign date = post.date %}
+{% endif %}
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -30,9 +36,10 @@
         <a href="{{ post.url | relative_url }}" rel="permalink" style="text-decoration: none; ">* {{ title }}</a>
       {% endif %}
     </h2>
-    <!-- {% if post.read_time %}
-      <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
-    {% endif %} -->
+    {% if post.date %}
+      <!-- <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>{% include write-time.html %}</p> -->
+      <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>{{ date | date: "%B %d, %Y" }}</p>
+    {% endif %}
     <!-- {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %} -->
   </article>
 </div>
