add post(LeetCode - Jewel And Stone), Customize CSS, Teaswer Image

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -19,7 +19,7 @@
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
-      <div class="archive__item-teaser">
+      <div class="archive__item-teaaser">
         <img src=
           {% if teaser contains "://" %}
             "{{ teaser }}"
@@ -40,5 +40,15 @@
       <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>{{ date | date: "%B %d, %Y" }}</p>
     {% endif %}
     <!-- {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %} -->
+    <!-- Home Post List teaser image 나오게 하기 위하면 아래 div calss="archive_item-teaser" 영역 주석 해제 -->
+    <!-- <div class="archive__item-teaser">
+      <img src=
+        {% if teaser contains "://" %}
+          "{{ teaser }}"
+        {% else %}
+          "{{ teaser | relative_url }}"
+        {% endif %}
+        alt="">
+    </div> -->
   </article>
 </div>
