--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -109,21 +109,37 @@ $masthead-link-color-hover: mix(#000, $primary-color, 25%) !default;
 $navicon-link-color-hover: mix(#fff, $primary-color, 75%) !default;
 
 /* syntax highlighting (base16) */
-$base00: #263238 !default;
-$base01: #2e3c43 !default;
-$base02: #314549 !default;
-$base03: #546e7a !default;
-$base04: #b2ccd6 !default;
-$base05: #eeffff !default;
-$base06: #eeffff !default;
-$base07: #ffffff !default;
+// $base00: #263238 !default;
+// $base01: #2e3c43 !default;
+// $base02: #314549 !default;
+// $base03: #546e7a !default;
+// $base04: #b2ccd6 !default;
+// $base05: #eeffff !default;
+// $base06: #eeffff !default;
+// $base07: #ffffff !default;
+// $base08: #f07178 !default;
+// $base09: #f78c6c !default;
+// $base0a: #ffcb6b !default;
+// $base0b: #c3e88d !default;
+// $base0c: #89ddff !default;
+// $base0d: #82aaff !default;
+// $base0e: #c792ea !default;
+// $base0f: #ff5370 !default;
+$base00: #f7f7f7 !default;
+$base01: #f7f7f7 !default;
+$base02: #f7f7f7 !default;
+$base03: #f7f7f7 !default;
+$base04: #8b8888 !default;
+$base05: #101010 !default;
+$base06: #151515 !default;
+$base07: #202020 !default;
 $base08: #f07178 !default;
-$base09: #f78c6c !default;
-$base0a: #ffcb6b !default;
-$base0b: #c3e88d !default;
+$base09: #8098e9 !default;
+$base0a: #992593 !default;
+$base0b: #687e48 !default;
 $base0c: #89ddff !default;
 $base0d: #82aaff !default;
-$base0e: #c792ea !default;
+$base0e: #000000 !default;
 $base0f: #ff5370 !default;
 
 /*
