--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -137,7 +137,7 @@ $base08: #f07178 !default;
 $base09: #8098e9 !default;
 $base0a: #992593 !default;
 $base0b: #687e48 !default;
-$base0c: #89ddff !default;
+$base0c: #000000 !default;
 $base0d: #82aaff !default;
 $base0e: #000000 !default;
 $base0f: #ff5370 !default;
