--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,14 @@
       {{ content }}
     </div>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-4196970601874791",
+              enable_page_level_ads: true
+        });
+    </script>
+
     {% if site.search == true %}
       <div class="search-content">
         {% include_cached search/search_form.html %}
