--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,17 @@
         });
     </script>
 
+    <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-4196970601874791"
+        data-ad-slot="6226709574"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script> -->
+
     {% if site.search == true %}
       <div class="search-content">
         {% include_cached search/search_form.html %}
