--- a/_layouts/customize-posts.html
+++ b/_layouts/customize-posts.html
@@ -50,7 +50,7 @@ layout: default
         {% endif %}
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
-        <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
             style="display:block"
             data-ad-client="ca-pub-4196970601874791"
@@ -59,7 +59,7 @@ layout: default
             data-full-width-responsive="true"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
-        </script> -->
+        </script>
       </section>
 
       <footer class="page__meta">
