--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -2,7 +2,7 @@
 
 <!-- end custom footer snippets -->
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-4196970601874791"
@@ -11,4 +11,4 @@
      data-full-width-responsive="true"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
