--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/blog/K_favico.png">
   <head>
     {% include head.html %}
     {% include head/custom.html %}
