--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,14 @@
   </style>
 <![endif]-->
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-4196970601874791",
+          enable_page_level_ads: true
+     });
+</script>
+
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
     {% if script contains "://" %}
