--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,7 @@
   </style>
 <![endif]-->
 
+<!-- 구글 오버레이 앵커 광고 스크립트 애드센스-->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
@@ -36,6 +37,7 @@
           enable_page_level_ads: true
      });
 </script>
+<!-- 구글 오버레이 앵커 광고 스크립트 애드센스-->
 
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
